fix button alignment

--- a/spmuck/static/css/spmuck.css
+++ b/spmuck/static/css/spmuck.css
@@ -70,6 +70,11 @@
     {
         margin-top: 29px;
     }
+
+    .blog-index-item button
+    {
+        margin-top: 6px;
+    }
 }
 
 @media (max-width: 970px) {
@@ -99,6 +104,11 @@
     p+p
     {
         margin-top: 21px;
+    }
+
+    .blog-index-item button
+    {
+        margin-top: 3px;
     }
 }
 
